--- a/src/components/TopBar/style.css
+++ b/src/components/TopBar/style.css
@@ -1,3 +1,12 @@
 .topBar {
     background-image: linear-gradient(to right, #CE377A, #E37A5C);
+    height: 100px;
+}
+
+.logo {
+    color: white;
+    font-size: 50px;
+    position: relative;
+    top: 40px;
+    left: 100px;
 }
