--- a/src/components/TopBar/style.css
+++ b/src/components/TopBar/style.css
@@ -1,11 +1,13 @@
-.topBar {
+.top-bar {
     background-image: linear-gradient(to right, #CE377A, #E37A5C);
     height: 100px;
+    width: 100%;
 }
 
 .logo {
     color: white;
     font-size: 50px;
+    width: 325px;
     position: relative;
     top: 40px;
     left: 100px;
