--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -21,7 +21,8 @@
     color: white;
     font-size: 30px;
     margin: 30px;
-    align-items: flex-end;
+    position: absolute;
+    bottom: 15%;
 }
 
 .icon-item {
