--- a/src/components/MainContent/style.css
+++ b/src/components/MainContent/style.css
@@ -2,6 +2,7 @@
     position: absolute;
     top: 95px;
     left: 200px;
-    width: 100%;
+    width: auto;
+    height: 100%;
     z-index: -1;
 }
