--- a/src/components/MainContent/style.css
+++ b/src/components/MainContent/style.css
@@ -2,7 +2,8 @@
     position: absolute;
     top: 95px;
     left: 200px;
-    width: auto;
-    height: 100%;
+    width: 85%;
+    height: auto;
     z-index: -1;
+    font-size: 24px;
 }
