--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -23,8 +23,9 @@
 
 .icons {
     font-size: 30px;
-    margin: 30px;
-    position: fixed;
+    margin: 5px;
+    width: 150px;
+    position: absolute;
     bottom: 1%;
 }
 
