--- a/src/components/MainContent/style.css
+++ b/src/components/MainContent/style.css
@@ -1,12 +1,13 @@
 .gallery {
     position: absolute;
     top: 110px;
-    left: 250px;
-    width: 80%;
+    width: 90%;
     max-height: 20em;
     z-index: -1;
     font-size: 24px;
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 img {
