--- a/src/components/MainContent/style.css
+++ b/src/components/MainContent/style.css
@@ -20,6 +20,10 @@ h4 {
     margin: 10px;
 }
 
+/* .portrait, .landscape {
+    order: 1;
+} */
+
 .portrait {
     height: auto;
     width: 100%;
@@ -35,4 +39,14 @@ h4 {
 #thumbnail {
     position: relative;
     right: 2%;
+    /* order: 2; */
+}
+
+@media (max-width: 991px) {
+    #thumbnail {
+        order: 2;
+    }
+    .portrait, .landscape {
+        order: 1;
+    }
 }
