--- a/src/components/TopBar/style.css
+++ b/src/components/TopBar/style.css
@@ -6,10 +6,9 @@
     top: 0;
 }
 
-#logo {
+.logo {
     color: white;
     font-size: 50px;
-    width: 325px;
     position: relative;
     top: 12px;
     left: 75px;
